# django-blog

./: .gitignore  docker-compose.yaml
blog/: Dockerfile  pyproject.toml
blog/blog/: settings.py  urls.py
blog/blogs/: forms.py  models.py  urls.py  views.py
blog/blogs/migrations/: 0001_initial.py  0002_blogpost_image.py
blog/blogs/templates/blogs/: create_post.html  detail.html  index.html  update_post.html
