[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Kirill Belokobylsky <userkirill609@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
pillow = "^11.0.0"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
